Тыквенный Спас (хэллоуин 2023)

--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -387,10 +387,10 @@
           </a>
         {% else %}
         <!--Блок ИВЕНТ-->
-        <a href="/new_year/" class="overview__event">
+        <a href="/halloween/" class="overview__event">
           <!--сообщение что войн нет-->
           {% if has_event.type == 'hl' %}
-          <p class="overview__war-no event">{% trans 'Хэллоуинский ивент' context "overview" %}</p>
+          <p class="overview__war-no event">Тыквенный спас</p>
           <!--иконка тыквы-->
           <svg width="34" height="34" viewBox="0 0 34 34" class="overview__war-icon"  fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="17" cy="17" r="16.5" stroke="var(--c10two)"/>
