--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -331,7 +331,7 @@
 
         this.isModalDisabled = this.getFromIsModalDisabledLS() ?? '';
 
-        if (this.isModalDisabled !== 'disabled') {
+        if (false) {
           this.modal.classList.add('active');
         } else {
           this.modal.classList.remove('active');
