цвет текста в регионе

--- a/region/templates/region/redesign/region_view.html
+++ b/region/templates/region/redesign/region_view.html
@@ -17,7 +17,11 @@
 
 {% block content %}
 <section class="party custom-scroll">
-
+    <style>
+    .party__regionInfo-block p span {
+      color: var(--c10one);
+    }
+    </style>
     <!-- Заголовок -->
     <h1 class="party__title ct__page-title">{{ page_name }}</h1>
 
