фиксы обучения и авто-производства

--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -159,7 +159,7 @@
 	<button class="edu__btn" id="eduPrevBtn">Назад</button>
 	<button class="edu__btn" id="eduNextBtn">Дальше</button>
   </div>
-  <button class="edu__dont" id="eduDont">Не показывать обучение</button>
+<!--  <button class="edu__dont" id="eduDont">Не показывать обучение</button>-->
 </div>
 </section>
 
