--- a/party/templates/party/party_blocks/no_party.html
+++ b/party/templates/party/party_blocks/no_party.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="col-xs-6 col-sm-6 col-md-6">
                     <!--Заголовок партии-->
-                    <h4 style="cursor: pointer" onclick="window.open('/party/{{ party.pk }}/', '_blank')">{{ party.title }}</h4>
+                    <h4 style="cursor: pointer" onclick="window.open('/party/{{ party.pk }}/')">{{ party.title }}</h4>
                 </div>
                 <div class="col-xs-2 col-sm-2 col-md-2">
                     <h4>{{ sizes|dict_key:party }} человек</h4>
