--- a/gov/templates/gov/elections.html
+++ b/gov/templates/gov/elections.html
@@ -51,7 +51,7 @@
                             </a>
                         </div>
                         <div class="col-xs-8 col-sm-8 col-md-8">
-                            <h3 style="cursor: pointer" onclick="window.open('/profile/{% localize off %}{{ candidate.pk }}{% endlocalize %}', '_blank')">{{ candidate.nickname }}</h3>
+                            <h3 style="cursor: pointer" onclick="window.open('/profile/{% localize off %}{{ candidate.pk }}{% endlocalize %}')">{{ candidate.nickname }}</h3>
                         </div>
                         <div class="col-xs-2 col-sm-2 col-md-2">
                             {% if vote %}
