--- a/party/templates/lists/region_parties_list.html
+++ b/party/templates/lists/region_parties_list.html
@@ -29,7 +29,7 @@
                                         </a>
                                     </div>
                                     <div class="col-xs-4 col-sm-4 col-md-4">
-                                        <h3 style="cursor: pointer" onclick="window.open('/party/{{ party.pk }}/', '_blank')">{{ party.title }}</h3>
+                                        <h3 style="cursor: pointer" onclick="window.open('/party/{{ party.pk }}/')">{{ party.title }}</h3>
                                     </div>
                                     <div class="col-xs-1 col-sm-1 col-md-1">
                                         <h3>{{ sizes|dict_key:party }}</h3>
