--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -762,6 +762,7 @@ a {
 }
 
 .nav__item {
+  flex-shrink: 0;
   height: 50rem;
   position: relative;
   list-style-type: none;
@@ -7137,6 +7138,147 @@ padding-right: 6rem;
     top: 50%;
     transform: translate(-50%, -50%);
     width: 600rem;
+  }
+}
+
+/*! shop */
+
+.shop {
+  padding-top: 14rem;
+  padding-bottom: 24rem;
+  height: calc(100% - 60rem);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.shop__title {
+  margin: 0;
+  margin-bottom: 24rem;
+}
+
+.shop__tabs {
+  padding-left: 0;
+  list-style: none;
+  width: 336rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+  display: flex;
+}
+
+.shop__tabs li {
+  flex-shrink: 0;
+}
+
+.shop__tab {
+  flex-shrink: 0;
+  position: relative;
+  display: flex;
+  height: 36rem;
+  padding: 0;
+  padding-right: 6rem;
+  background-color: var(--c60);
+  transition: all 0.5s ease;
+  border: 0;
+  cursor: pointer;
+}
+
+.shop__tab img {
+  flex-shrink: 0;
+  display: block;
+  width: 36rem;
+  height: 36rem;
+  margin-right: 6rem;
+}
+
+.shop__tab span {
+  flex-shrink: 0;
+  font-weight: 400;
+  font-size: 18rem;
+  line-height: 36rem;
+  letter-spacing: -0.04em;
+  color: var(--c10one);
+  transition: all 0.5s ease;
+}
+
+.shop__tab::before {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  display: block;
+  width: 8rem;
+  height: 8rem;
+  content: '';
+  background-color: var(--c60);
+  clip-path: polygon(0 0, 100% 0, 100% 100%);
+}
+
+.shop__tab.active {
+  background-color: var(--c10two);
+}
+
+.shop__tab.active span {
+  color: var(--c60);
+}
+
+.shop__container {
+  display: flex;
+  flex-direction: column;
+  gap: 12rem;
+  padding: 0 12rem;
+}
+
+.shop__stickersBlock {
+  display: none;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: space-between;
+  overflow-y: auto;
+  padding-left: 0;
+  list-style: none;
+}
+
+.shop__stickersBlock.active {
+  display: flex;
+}
+
+.shop__stick {
+  display: block;
+  width: 82.5rem;
+  height: 82.5rem;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.shop__stick img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+@media (min-width: 1000px) {
+  .shop {
+    padding-top: 14rem;
+    padding-bottom: 72rem;
+    margin-top: 100rem;
+    height: calc(100% - 100rem);
+    margin-left: 330rem;
+  }
+  .shop__tabs {
+    width: 100%;
+  }
+  .shop__stickersBlock {
+    gap: 12rem;
+    justify-content: flex-start;
+  }
+  .shop__stick {
+    display: block;
+    width: 166rem;
+    height: 166rem;
+    padding: 0;
+    border: 0;
+    background-color: transparent;
   }
 }
 
