--- a/player/templates/player/view_profile.html
+++ b/player/templates/player/view_profile.html
@@ -64,7 +64,7 @@
                                 <b><font size="5">Место жительства:</font></b>
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
-                                <b><font size="4"  onclick="window.open('/region/{{ char.region.pk }}/', '_blank')" style="cursor: pointer">{{ char.region }}</font></b>
+                                <b><font size="4"  onclick="window.open('/region/{{ char.region.pk }}/')" style="cursor: pointer">{{ char.region }}</font></b>
                             </div>
                         </div>
                         <!--место прописки-->
@@ -75,8 +75,8 @@
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
                                 <!--получена-->
-<!--                                <b><font size="4"  onclick="window.open('/region/{{ char.residency.pk }}/', '_blank')" style="cursor: pointer">{{ char.residency }}, {% trans 'since' %}: {{ char.residency_date|timezone:char.time_zone|date:"d.m.Y H:i" }}</font></b>-->
-                                <b><font size="4"  onclick="window.open('/region/{{ char.residency.pk }}/', '_blank')" style="cursor: pointer">{{ char.residency }}, с: {{ char.residency_date|timezone:player.time_zone|date:"d.m.Y H:i" }}</font></b>
+<!--                                <b><font size="4"  onclick="window.open('/region/{{ char.residency.pk }}/')" style="cursor: pointer">{{ char.residency }}, {% trans 'since' %}: {{ char.residency_date|timezone:char.time_zone|date:"d.m.Y H:i" }}</font></b>-->
+                                <b><font size="4"  onclick="window.open('/region/{{ char.residency.pk }}/')" style="cursor: pointer">{{ char.residency }}, с: {{ char.residency_date|timezone:player.time_zone|date:"d.m.Y H:i" }}</font></b>
                             </div>
                         </div>
                         <!--партия-->
@@ -95,7 +95,7 @@
                                         <img src="{% static 'img/nopic_party.png' %}" width="50" height="50">
                                     {% endif %}
                                     </a>
-                                    <b><font size="4" style="cursor: pointer" onclick="window.open('/party/{{ char.party.pk }}/', '_blank')">{{ char.party.title }}</font></b>
+                                    <b><font size="4" style="cursor: pointer" onclick="window.open('/party/{{ char.party.pk }}/')">{{ char.party.title }}</font></b>
                                 {% else %}
                                     <b><font size="5" >беспартийный</font></b>
 <!--                                    <b><font size="5" >{% trans 'unaffiliated' %}</font></b>-->
