--- a/player/templates/player/redesign/menu.html
+++ b/player/templates/player/redesign/menu.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<nav class="nav" id="modal-nav">
+<nav class="nav custom-scroll" id="modal-nav">
 
 	<ul class="nav__list">
 		<li class="nav__item">
