--- a/player/templates/player/redesign/view_profile.html
+++ b/player/templates/player/redesign/view_profile.html
@@ -45,11 +45,15 @@
 				{% else %}{% nopic player 'profile__ava' %}{% endif %}
 
 				{% if ava_border %}
+					{% if png_use %}
+				<img src="{{ ava_border.image.url }}" class="profile__ava-border">
+					{% else %}
 				<svg class="profile__ava-border" viewBox="0 0 {% localize off %}{{ ava_border.box_x }} {{ ava_border.box_y }}{% endlocalize %}">
 					{% autoescape off %}
 					{{ ava_border.shape }}
 					{% endautoescape %}
 				</svg>
+					{% endif %}
 				{% endif %}
 			</div>
 
