Страница мирового онлайна

--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -216,7 +216,7 @@
                 </svg>
                 <span>{{ world_pop }}</span><!--Количество игроков-->
               </li>
-              <li class="ct__view-info-item">
+              <li class="ct__view-info-item" onclick="window.location.href = '/world/online/'" style="cursor: pointer">
                 <svg width="16" height="14" viewBox="0 0 16 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.29292 4C9.29292 4.78951 8.58303 5.5 7.61667 5.5C6.65032 5.5 5.94043 4.78951 5.94043 4C5.94043 3.21049 6.65032 2.5 7.61667 2.5C8.58303 2.5 9.29292 3.21049 9.29292 4Z" stroke="var(--c10one)"/>
                   <path d="M4.35254 12C4.35254 7.2 6.16608 6 7.61691 6C11.0989 6 10.8813 10 10.8813 12H4.35254Z" stroke="var(--c10one)"/>
