--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2886,8 +2886,8 @@ p.overview__love-stat-timer {
   line-height: 24rem;
   text-align: center;
   letter-spacing: -0.04em;
-  color: var(--c10one);
-  background-color: var(--c30);
+  color: var(--c60);
+  background-color: var(--c10two);
   border: 0;
   padding: 0;
 }
