превью картинок в списке чатов

--- a/chat/templates/chat/dialogue.html
+++ b/chat/templates/chat/dialogue.html
@@ -74,7 +74,7 @@
 						  <h3></h3>
 						  <span></span>
 						</div>
-						<div class="overview__chat-message-body">
+						<div class="overview__chat-message-body overview__chat-message-body--dialog">
 						  <!--текст сообщения-->
 						  <p></p>
 						</div>
