--- a/storage/templates/storage/redesign/trading/trading.html
+++ b/storage/templates/storage/redesign/trading/trading.html
@@ -572,7 +572,7 @@
 	function handleStocksClick() {
 
         const stocksValueElement = document.getElementById('stocks_value');
-        const value = parseInt(stocksValueElement.innerText);
+        const value = parseInt(stocksValueElement.innerText.replace(/ /g,''));
 
         if (!isNaN(value)) {
             $('#count').val(value);
