--- a/factory/templates/factory/redesign/factory.html
+++ b/factory/templates/factory/redesign/factory.html
@@ -81,7 +81,7 @@
     <form id="produce_form" role="form" class="factory__topBlock">
 
       <div class="ct__selectWithImage">
-          {% with store_1=storages|first %}
+          {% with store_1=first_storage %}
           <div class="ct__selectWithImage-selected" id="storage" data-value="{% localize off %}{{ store_1.pk }}{% endlocalize %}">
               <img src="static/img/regions/{{ store_1.region.on_map_id }}.png">
               <div class="ct__selectWithImage-firstText">
@@ -103,9 +103,9 @@
 
       <label class="factory__topLabel ct__wide-modal-label-select ct__wide-modal-label-select--min">
         <select id="group">
-          <option id="group_default" value='default' disabled selected>{% trans 'выбор группы товаров' context "factory" %}</option>
+          <option id="group_default" value='default' disabled {% if not auto %}selected{% endif %}>{% trans 'выбор группы товаров' context "factory" %}</option>
           {% for group in categories %}
-          <option value='{{ group }}'>{{ storage_cl|get_attr:'types'|dict_key:group }}</option>
+          <option value='{{ group }}' {% if auto and auto.good.type == group %}selected{% endif %}>{{ storage_cl|get_attr:'types'|dict_key:group }}</option>
           {% endfor %}
         </select>
         <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -115,10 +115,10 @@
 
       <label class="factory__topLabel ct__wide-modal-label-select ct__wide-modal-label-select--min">
         <select disabled name="good" id="good">
-          <option id="good_default" value='default' disabled selected>{% trans 'выбор товара' context "factory" %}</option>
+          <option id="good_default" value='default' disabled {% if not auto %}selected{% endif %}>{% trans 'выбор товара' context "factory" %}</option>
           {% for type in good_by_type|get_key_list %}
               {% for good in good_by_type|dict_key:type %}
-          <option id="good_{% localize off %}{{ good }}{% endlocalize %}" value='{% localize off %}{{ good }}{% endlocalize %}' style="display: none">{{ good_names|dict_key:good }}</option>
+          <option id="good_{% localize off %}{{ good }}{% endlocalize %}" value='{% localize off %}{{ good }}{% endlocalize %}' {% if auto and auto.good.pk == good %}selected{% else %}style="display: none"{% endif %} >{{ good_names|dict_key:good }}</option>
               {% endfor %}
           {% endfor %}
         </select>
@@ -129,7 +129,10 @@
 
       <label class="factory__topLabel ct__wide-modal-label-select ct__wide-modal-label-select--min">
         <select disabled name="schema" id="schema">
-          <option id="schema_default" value='default' disabled selected>{% trans 'выбор схемы' context "factory" %}</option>
+          <option id="schema_default" value='default' disabled {% if not auto %}selected{% endif %}>{% trans 'выбор схемы' context "factory" %}</option>
+            {% if auto %}
+          <option id="schema_auto" value='default' disabled selected>{% trans 'авто-производство' context "factory" %}</option>
+            {% endif %}
         </select>
         <svg width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M1 1L7.5 7L14 1" stroke="var(--c10one)"/>
