ссылка на рейтинг

--- a/party/templates/party/redesign/party_view.html
+++ b/party/templates/party/redesign/party_view.html
@@ -86,6 +86,9 @@
   						</td>
   						<td class="j-t-two">
                             {{ players_count }}
+							<a href="/parties_top/" style="color: var(--c10two);">
+							{% trans '(к рейтингу)' context "profile" %}
+							</a>
   						</td>
   					</tr>
   					<tr>
