--- a/player/templates/player/redesign/lists/uni_list_templatetag.html
+++ b/player/templates/player/redesign/lists/uni_list_templatetag.html
@@ -95,7 +95,7 @@
 						{% endfor %}
 
 					{% else %}
-					  <td class="j-t-{{ col }}" {% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == 'PlayerWithMined' %} style="cursor: pointer" onclick="window.open('/profile/{% localize off %}{{ line.pk }}{% endlocalize %}/')"{% endif %}>
+					  <td class="j-t-{{ col }}" {% if col == "reward" %}style="color: var(--c10two);"{% endif %} {% if line|get_class_name == 'Player' or line|get_class_name == 'PlayerWithTop' or line|get_class_name == 'PlayerWithMined' %} style="cursor: pointer" onclick="window.open('/profile/{% localize off %}{{ line.pk }}{% endlocalize %}/')"{% endif %}>
 					  <!--картинка рега-->
 					  {% if col == 'on_map_id' %}
 							<img src="/static/img/regions/{{ line.on_map_id }}.png" alt="{{ col }}">
